<resources>
    <string name="app_name">SaneleNgwenya DevSpace</string>
    <string name="next">Next</string>
    <string name="visitorsname">visitorsName</string>
    <string name="dear_sanele_welcome_to_my_code">Dear Sanele welcome to my code</string>
    <string name="sanele_ngwenya">sanele ngwenya</string>
    <string name="welcome_to_my_code">welcome to my code</string>
    <string name="my_dev_profile">My Dev Profile</string>
    <string name="about_me">About Me</string>
    <string name="calculate">Calculate</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="name_of_calculator">Name of Calculator</string>
    <string name="force_area"><![CDATA[Force & Area]]></string>
    <string name="todo">TODO</string>
    <string name="setting" />
    <string name="contact_us" />
    <string name="share" />
    <string name="Home">Button</string>
    <string name="Calculator">Button</string>
    <string name="AboutMe">Button</string>
    <string name="MyDevProfile">Button</string>
    <string name="item">Item</string>
    <string name="visitorsName">visitorsName</string>
    <string name="SaneleNgwenya">Sanele Ngwenya</string>
    <string name="thank_you">Thank You...</string>
    <string name="back">Back</string>
    <string name="my_name_is_sanele_ngwenya">My name is Sanele Ngwenya</string>
    <string name="and_love_coding">and love coding</string>
    <string name="i_m_a_student_cput">I\'m a student cput</string>
    <string name="about_me1">About Me:</string>
    <string name="main_menu">Main Menu</string>
    <string name="home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="aboutme">AboutMe</string>
    <string name="mydevprofile">MyDevProfile</string>
    <string name="student_name_code">Student Name Code</string>
    <string name="click_here">Click Here</string>
    <string name="HomeButtonPressed">Home button pressed</string>
    <string name="HomeButtonPressed">Home button pressed</string>
</resources>