<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:background = "#adff2f"
    android:orientation = "vertical"
    tools:context=".AboutMe"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id = "@+id/text"
        android:textSize = "18sp"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/thank_you"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/tv_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/about_me1"
        android:textAllCaps="true"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_tell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/my_name_is_sanele_ngwenya"
        android:textAllCaps="true"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/i_m_a_student_cput"
        android:textAllCaps="true"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_sorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/and_love_coding"
        android:textAllCaps="true"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_margin="5dp"
        android:layout_height="120dp"
        android:layout_gravity="right"
        android:src="@drawable/download"
        android:contentDescription="@string/todo" />

</LinearLayout>