<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <MainMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aboutMe"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginEnd="195dp"
        android:layout_marginRight="195dp"
        android:layout_marginBottom="269dp">


        <item
            android:id="setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orderInCategory="100"
            android:title="@string/setting" />

        <item
            android:id="share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orderInCategory="100"
            android:title="@string/share" />

        <item
            android:id="contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orderInCategory="100"
            android:title="@string/contact_us" />


    </MainMenu>
    <item android:title="@string/item" />


</menu>

