<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background = "#33FFFF00"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">



    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/action_menu_presenter"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/main_menu"
        android:textAllCaps="true"
        android:textSize="55sp"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="-10dp" />


    <Button
        android:id="@+id/home"
        android:layout_width="192dp"
        android:layout_height="114dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#99FFFF00"
        android:fontFamily="sans-serif-black"
        android:text="@string/home"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/calculator"
        android:layout_width="182dp"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="256dp"
        android:background="#99FFFF00"
        android:fontFamily="sans-serif-black"
        android:text="@string/calculator"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.728"
        app:layout_constraintStart_toEndOf="@+id/home"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/aboutMe"
        android:layout_width="241dp"
        android:layout_height="144dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#99FFFF00"
        android:fontFamily="sans-serif-black"
        android:text="@string/aboutme"
        android:textColorLink="@android:color/background_dark"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home"
        app:layout_constraintVertical_bias="0.233"
        tools:ignore="MissingConstraints" />



    <Button
        android:id="@+id/MyDevProfile"
        android:layout_width="346dp"
        android:layout_height="117dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:fontFamily="sans-serif-black"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#99FFFF00"
        android:text="@string/mydevprofile"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutMe"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>

